--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     -->
     <string name="time_test">00:00:00</string>
     <string name="hello_world">Hello Square World!</string>
+    <string name="test">this is test</string>
 </resources>
