button機能を追加できました ボタンを押すと振動させたかったのですが なぜか押して離すと振動するようになりました smaartwatchのことは任せました！

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="time_test">00:00:00</string>
     <string name="hello_world">Hello Square World!</string>
     <string name="test">this is test</string>
+    <string name="teisi">一時停止</string>
 </resources>
